# whisper_ws2

./: .gitignore  README.md
src/ voice_control_move/xyz/: CMakeLists.txt  package.xml
src/ voice_control_move/xyz/src/: xyz_node.cpp
src/ voice_control_move/xyz_bringup/: CMakeLists.txt  package.xml
src/ voice_control_move/xyz_bringup/launch/: xyz_launch.py
src/audio_common/audio_common/include/audio_common/: audio_capturer_node.hpp
src/whisper_ros/whisper_bringup/launch/: whisper-spanish-stream.launch.py  whisper.launch.py
src/whisper_ros/whisper_demos/: package.xml  setup.py
src/whisper_ros/whisper_demos/whisper_demos/: whisper_demo_node.py
src/whisper_ros/whisper_ros/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/whisper_ros/whisper_ros/install/whisper_ros/share/whisper_ros/: package.bash  package.zsh
src/whisper_ros/whisper_ros/src/whisper_ros/: whisper_base_node.cpp
